<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topNavigationAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:theme="@style/MyThemeOverlay_Toolbar">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/resetButton"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="start"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="10dp"/>

            <Button
                android:id="@+id/resetButton"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                android:layout_marginEnd="5dp"
                android:gravity="start"
                android:text="@string/reset"
                android:textColor="@color/white"
                android:textSize="12sp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.chip.ChipGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/topNavigationAppBar"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:id="@+id/chip_group">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_no_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:text="@string/no_category"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_politics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:text="@string/politics"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_society"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:text="@string/society"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_economic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:text="@string/economics"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_sport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:text="@string/sport"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_culture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:text="@string/culture"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_tech"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:text="@string/tech"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_science"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:text="@string/science"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:text="@string/auto"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:text="@string/others"/>

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/city_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        android:textSize="30sp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        map:layout_constraintTop_toBottomOf="@id/chip_group">

        <AutoCompleteTextView
            android:id="@+id/editTextAuto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:hint="@string/city"
            />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>